# db-hw

./: .gitignore  Makefile  README.md  README_orig.md  docker-compose.yml  pyproject.toml
raw_data/: purchases.csv
src/: config.py
src/db/: mongodb_client.py  neo4j_client.py  postgres_client.py  redis_client.py
src/loaders/: document_loader.py  graph_loader.py  relational_loader.py  vector_loader.py
src/services/: cart_service.py  recommendation_service.py  search_service.py
src/utils/: data_parser.py  purchase_generator.py
tests/: test_artisan_market.py
